--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,16 @@
             <artifactId>laxio-protocol-basic</artifactId>
             <version>1.13.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.laxio</groupId>
+            <artifactId>laxio-protocol-v404</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.26</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
